--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/wwwroot/css/site.css
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/wwwroot/css/site.css
@@ -95,6 +95,7 @@ body {
     gap: 50px;
 }
 #countOrderSysteam {
+    text-align:center;
     outline:none;
     margin-left: 50px;
     margin-right: 50px;
