--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Index.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Index.cshtml
@@ -8,6 +8,7 @@
     <div id="myModal_NewSchliessanlagen" class="d-grid gap-3">
         <div id="routBAR">
             <div id="Bar">
+                <button class="btn btn-danger"><a href="@Url.Action("ImageConfig","Home")">Image</a></button>
                 <button class="btn btn-secondary"><a href="@Url.Action("Profil_HalbzylinderRout","Home")">Profil-Halbzylinder</a></button>
                 <button class="btn btn-success"><a href="@Url.Action("Profil_KnaufzylinderRout","Home")">Profil-Knaufzylinder</a></button>
                 <button class="btn btn-danger"><a href="@Url.Action("HebelzylinderRout","Home")">Hebelzylinder</a></button>
