--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/wwwroot/css/site.css
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/wwwroot/css/site.css
@@ -84,8 +84,23 @@ body {
 #hederBlockOrder{
     display:flex;
 }
+#deleteImg {
+    width: 30px;
+    border-radius: 40px;
+    background: white;
+    margin-left: -30px;
+    position: absolute;
+    color: red;
+    font-size: 24px;
+}
+#gridImg {
+    grid-template-columns: 320px 320px 320px 320px;
+    display: grid;
+    text-align: center
+}
 #orderCostHeader 
 {
+   
     margin-left: 400px;
     gap: 50px;
     display: flex;
