--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/Finisher.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/Finisher.cshtml
@@ -183,10 +183,11 @@
 
                                         </select>
 
-                                            <input type="hidden" name="DoppelOption" id="Option-@d + @i" />
+                                            <input type="hidden" id="Option-@d + @i" />
                                             <input type="hidden" id="d-@d + @i" />
                                     }
-                                    
+
+                                        <input type="hidden" name="DoppelOption" id="OptionAll-@d" />
                                 }
 
 
@@ -272,7 +273,7 @@
                                     <option>Innenlänge (B)</option>
                                     @for (int i = 0; i < ViewBag.KnayfZelinderIntern.Count; i++)
                                     {
-                                            <option id="OptionI">@ViewBag.KnayfZelinderIntern[i]</option>
+                                       <option id="OptionI">@ViewBag.KnayfZelinderIntern[i]</option>
                                     }
                                 </select>
                                  <input type="hidden" id="Innen-@d" />
@@ -309,9 +310,10 @@
                                             }
 
                                         </select>
-                                            <input type="hidden" name="KnayfOption" id="Option-@d + @i" />
+                                            <input type="hidden"  id="Option-@d + @i" />
                                             <input type="hidden" id="d-@d + @i" />
                                     }
+                                        <input type="hidden" name="KnayfOption" id="OptionAll-@d" />
                                 } 
 
                             </div>
@@ -424,9 +426,10 @@
                                             }
                                         </select>
 
-                                            <input type="hidden" name="HalbOption" id="Option-@d + @i" />
+                                            <input type="hidden"  id="Option-@d + @i" />
                                             <input type="hidden" id="d-@d + @i" />
                                     }
+                                        <input type="hidden" name="HalbOption" id="OptionAll-@d" />
                                 } 
                             </div>
                         </div>
@@ -525,9 +528,10 @@
                                                 valueCount++;
                                             }
                                         </select>
-                                            <input type="hidden"  name="HebelOption" id="Option-@d + @i" />
+                                            <input type="hidden"   id="Option-@d + @i" />
                                             <input type="hidden" id="d-@d + @i" />
                                     }
+                                    <input type="hidden" name="HebelOption" id="OptionAll-@d" />
                                 } 
                             </div>
                         </div>
@@ -635,6 +639,7 @@
                                             <input type="hidden" name="VorhnaOption" id="Option-@d + @i" />
                                             <input type="hidden" id="d-@d + @i" />
                                     }
+                                        <input type="hidden" name="VorhnaOption" id="OptionAll-@d" />
                                 }
                             </div> 
                         </div>
@@ -730,9 +735,10 @@
 
                                         </select>
                                             <input type="hidden" id="d-@d + @i" />
-                                            <input type="hidden" name="AussenOption" id="Option-@d + @i" />
+                                            <input type="hidden"  id="Option-@d + @i" />
 
                                     }
+                                        <input type="hidden" name="AussenOption" id="OptionAll-@d" />
                                 } 
                             </div>
                         </div>
@@ -874,30 +880,38 @@
 
         let Selector = document.getElementById(id);
 
+        let TotalOptions = document.getElementById("OptionAll-" + idBlock);
+
+        let AllSelectro = BlockTur.querySelectorAll("select");
         let selectedOption = Selector.options[Selector.selectedIndex].id;
 
         QueryNameOptions.forEach((item)=>
         {
             if (item.defaultValue === OptionsName ) 
-            {   
+            {
+
                 if (optionsValue != "Nein") 
                 {
                     item.value = '\u2713' + OptionsName;
                     item.style.color = "green";
-                    if (item.value === '\u2713' + "Freilauffunktion") 
+                    if (item.value === '\u2713' + "Freilauffunktion" || item.value === '\u2713' + "Freilauf") 
                     {
                         hasFreilauffunktion = true;
 
-                        if (item.value === '\u2713' + "Freilauffunktion" && hasFreilauffunktion === true && hasNotUndGefahrenfunktion === true) 
-                        {
+                        if (item.value === '\u2713' + "Freilauffunktion" && hasFreilauffunktion === true && hasNotUndGefahrenfunktion === true || item.value === '\u2713' + "Freilauf" && hasFreilauffunktion === true && hasNotUndGefahrenfunktion === true) {
                             for (let i = 0;i <QueryNameOptions.length; i++) 
                             {
-                                if (QueryNameOptions[i].value === '\u2713' + "Not- und Gefahrenfunktion") 
+                                if (QueryNameOptions[i].value === '\u2713' + "Not- und Gefahrenfunktion" || QueryNameOptions[i].value === '\u2713' + "NGF") 
                                 {
                                     let OptionOldCheker = document.getElementById(`d-${idBlock} + ${i}`);
                                     AllPrice.value = (parseFloat(AllPrice.value) - (OptionOldCheker.value * Number(countSchluss.value)));
                                     QueryNameOptions[i].value = QueryNameOptions[i].defaultValue;
                                     QueryNameOptions[i].style.color = "black";
+
+                                    let regex = item.defaultValue;
+
+                                    TotalOptions.value = TotalOptions.value.replace(regex + ':  JA, ', '');
+
                                     var chekedSelect = document.getElementById(idBlock + "-Options-" + i);
                                     chekedSelect.value = "Nein";
                                     hasFreilauffunktion == false;
@@ -906,11 +920,10 @@
                             }
                         }
                     }
-                    else if (item.value === '\u2713' + "Not- und Gefahrenfunktion") 
-                    {
+                    else if (item.value === '\u2713' + "Not- und Gefahrenfunktion" || item.value === '\u2713' + "NGF") {
                         hasNotUndGefahrenfunktion = true;
                         
-                        if (item.value === '\u2713' + "Not- und Gefahrenfunktion" && hasFreilauffunktion === true && hasNotUndGefahrenfunktion === true) 
+                        if (item.value === '\u2713' + "Not- und Gefahrenfunktion" && hasFreilauffunktion === true && hasNotUndGefahrenfunktion === true || item.value === '\u2713' + "NGF" && hasFreilauffunktion === true && hasNotUndGefahrenfunktion === true) 
                         {
                             for (let i = 0; i < QueryNameOptions.length; i++) 
                             {
@@ -919,6 +932,11 @@
                                     let OptionOldCheker = document.getElementById(`d-${idBlock} + ${i}`);
                                     AllPrice.value = (parseFloat(AllPrice.value) - (OptionOldCheker.value * Number(countSchluss.value)));
                                     QueryNameOptions[i].value = QueryNameOptions[i].defaultValue;
+
+                                    let regex = item.defaultValue;
+
+                                    TotalOptions.value = TotalOptions.value.replace(regex + ':  JA, ', '');
+
                                     QueryNameOptions[i].style.color = "black";
                                     var chekedSelect = document.getElementById(idBlock + "-Options-" + i);
                                     chekedSelect.value = "Nein";
@@ -928,13 +946,13 @@
                             
                         }
                     }
+                   
 
                     if (TypeSylinder === "Doppel") 
                     {
                             let OptionOldCheker = document.getElementById(`d-${idBlock} + ${N}`);
-                            
-                            let OptionDoppel = document.getElementById(`Option-${idBlock} + ${N}`);
-                            OptionDoppel.value = `${item.defaultValue}:  ${optionsValue}`;
+
+                             TotalOptions.value += `${item.defaultValue}:  ${optionsValue}` + ", ";
 
                             AllPrice.value = parseFloat(AllPrice.value) + (DoppelCostValue[selectedOption] * Number(countSchluss.value));
                             OptionOldCheker.value = DoppelCostValue[selectedOption];
@@ -943,8 +961,7 @@
                     {
                         let OptionOldCheker = document.getElementById(`d-${idBlock} + ${N}`);
 
-                        let OptionKnayf = document.getElementById(`Option-${idBlock} + ${N}`);
-                        OptionKnayf.value = `${item.defaultValue}:  ${optionsValue}`;
+                        TotalOptions.value += `${item.defaultValue}:  ${optionsValue}` + ", ";
 
                         AllPrice.value = parseFloat(AllPrice.value) + (KnayfOptionPrice[selectedOption] * Number(countSchluss.value));
                         OptionOldCheker.value = KnayfOptionPrice[selectedOption];
@@ -953,8 +970,7 @@
                     {
                         let OptionOldCheker = document.getElementById(`d-${idBlock} + ${N}`);
 
-                        let OptionHalb = document.getElementById(`Option-${idBlock} + ${N}`);
-                        OptionHalb.value = `${item.defaultValue}:  ${optionsValue}`;
+                        TotalOptions.value += `${item.defaultValue}:  ${optionsValue}` + ", ";
 
                         AllPrice.value = parseFloat(AllPrice.value) + (HalbOptionsValueCost[selectedOption] * Number(countSchluss.value));
                         OptionOldCheker.value = HalbOptionsValueCost[selectedOption];
@@ -963,8 +979,7 @@
                     {
                         let OptionOldCheker = document.getElementById(`d-${idBlock} + ${N}`);
 
-                        let OptionHelb = document.getElementById(`Option-${idBlock} + ${N}`);
-                        OptionHelb.value = `${item.defaultValue}:  ${optionsValue}`;
+                        TotalOptions.value += `${item.defaultValue}:  ${optionsValue}` + ", ";
 
                         AllPrice.value = parseFloat(AllPrice.value) + (HebelOptionsCost[selectedOption] * Number(countSchluss.value));
                         OptionOldCheker.value = HebelOptionsCost[selectedOption];
@@ -973,8 +988,7 @@
                     {
                         let OptionOldCheker = document.getElementById(`d-${idBlock} + ${N}`);
 
-                        let OptionVorhan = document.getElementById(`Option-${idBlock} + ${N}`);
-                        OptionVorhan.value = `${item.defaultValue}:  ${optionsValue}`;
+                        TotalOptions.value += `${item.defaultValue}:  ${optionsValue}` + ", ";
 
                         AllPrice.value = parseFloat(AllPrice.value) + (VorhanSchlossValueCost[selectedOption] * Number(countSchluss.value));
                         OptionOldCheker.value = VorhanSchlossValueCost[selectedOption];
@@ -983,8 +997,7 @@
                     {
                         let OptionOldCheker = document.getElementById(`d-${idBlock} + ${N}`);
 
-                        let OptionAussen = document.getElementById(`Option-${idBlock} + ${N}`);
-                        OptionAussen.value = `${item.defaultValue}:  ${optionsValue}`;
+                        TotalOptions.value += `${item.defaultValue}:  ${optionsValue}` + ", ";
 
                         AllPrice.value = parseFloat(AllPrice.value) + (AussenRundOptionsCostValue[selectedOption] * Number(countSchluss.value));
                         OptionOldCheker.value = AussenRundOptionsCostValue[selectedOption];
@@ -995,17 +1008,28 @@
                     if (TypeSylinder === "Doppel") 
                     {
                         let OptionOldCheker = document.getElementById(`d-${idBlock} + ${N}`);
+
+                        // let optionsValue = document.getElementById(`${idBlock}-Options-${N}`);
+
+                        let regex = item.defaultValue;
                         
+                        TotalOptions.value = TotalOptions.value.replace(regex + ':  JA, ', '');
+
                         let OptionDoppel = document.getElementById(`Option-${idBlock} + ${N}`);
+                        
                         OptionDoppel.value = ``;
 
                         AllPrice.value = (parseFloat(AllPrice.value) - (OptionOldCheker.value * Number(countSchluss.value)));
                         item.value = OptionsName;
+
                         item.style.color = "black";
                     }
                     if (TypeSylinder === "Knayf") 
                     {
                         let OptionOldCheker = document.getElementById(`d-${idBlock} + ${N}`);
+
+                        let regex = item.defaultValue;
+                        TotalOptions.value = TotalOptions.value.replace(regex + ':  JA, ', '');
 
                         let OptionKnayf = document.getElementById(`Option-${idBlock} + ${N}`);
                         OptionKnayf.value = ``;
@@ -1018,6 +1042,9 @@
                     {
                         let OptionOldCheker = document.getElementById(`d-${idBlock} + ${N}`);
 
+                        let regex = item.defaultValue;
+                        TotalOptions.value = TotalOptions.value.replace(regex + ':  JA, ', '');
+
                         let OptionHalb = document.getElementById(`Option-${idBlock} + ${N}`);
                         OptionHalb.value = ``;
                         
@@ -1029,6 +1056,9 @@
                     {
                         let OptionOldCheker = document.getElementById(`d-${idBlock} + ${N}`);
 
+                        let regex = item.defaultValue;
+                        TotalOptions.value = TotalOptions.value.replace(regex + ':  JA, ', '');
+
                         let OptionHelb = document.getElementById(`Option-${idBlock} + ${N}`);
                         OptionHelb.value = ``;
 
@@ -1039,7 +1069,10 @@
                     if (TypeSylinder === "Vorhan") 
                     {
                         let OptionOldCheker = document.getElementById(`d-${idBlock} + ${N}`);
-                         
+
+                        let regex = item.defaultValue;
+                        TotalOptions.value = TotalOptions.value.replace(regex + ':  JA, ', '');
+
                         let OptionVorhan = document.getElementById(`Option-${idBlock} + ${N}`);
                         OptionVorhan.value = ``;
 
@@ -1050,6 +1083,9 @@
                     if (TypeSylinder === "Aussen") 
                     {
                         let OptionOldCheker = document.getElementById(`d-${idBlock} + ${N}`);
+
+                        let regex = item.defaultValue;
+                        TotalOptions.value = TotalOptions.value.replace(regex + ':  JA, ', '');
 
                          let OptionAussen = document.getElementById(`Option-${idBlock} + ${N}`);
                         OptionAussen.value = ``;
@@ -1062,7 +1098,6 @@
             }
         });
        
-
     }
 
     function plus(n) 
